@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-06-18
+2015-6-26 David Schneider
+- update to pdsdata 8.3.1 with Epix::Config100aV2, JIRA PSAS-166
+
 Tag: V00-06-17
 2015-5-28 David Schneider
 - update to pdsdata 8.2.9 with BldDataSpectrometerV1 hproj int32 fix, JIRA PSAS-151
